# sql-opt-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  setup.py  test_basic.py
dashboard/: index.html
scripts/: validate-submission.sh
server/: app.py
sql_opt_env/: __init__.py  env.py  models.py  tasks.py
sql_opt_env.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_env.py
