[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sql_opt_env"
version = "0.1.0"
description = "OpenEnv-compatible SQL query optimization environment"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
